# RNeo4j

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.txt  Makefile  NAMESPACE  README.Rmd  README.md  RNeo4j.Rproj  build-libneo4j-client.sh  build.sh  install-deps.sh  install_deps.sh  neoget  test.sh
R/: REXPORT.R  RNeo4j.R  Rneo4j.R  addConstraint.R  addIndex.R  addLabel.R  adjacencyMatrix.R  allDijkstra.R  allShortestPaths.R  appendCypher.R  browse.R  clear.R  commit.R  createNode.R  createRel.R  cypher.R  cypherToList.R  degreeMatrix.R  delete.R  deleteProp.R  dijkstra.R  dropConstraint.R  dropIndex.R  dropLabel.R  empty.R  endNode.R  getConstraint.R  getEnd.R  getID.R  getIndex.R  getLabel.R  getLabeledNodes.R  getNodeByCypher.R  getNodeByIndex.R  getNodes.R  getOrCreateNode.R  getPaths.R  getRelByCypher.R  getRels.R  getSingleNode.R  (+20 more)
data/: movies.Rdata
man/: RNeo4j-package.Rd  RNeo4j.Rd  Rneo4j-package.Rd  Transactions.Rd  addConstraint.Rd  addIndex.Rd  addLabel.Rd  adjacencyMatrix.Rd  allDijkstra.Rd  allShortestPaths.Rd  browse.Rd  clear.Rd  createNode.Rd  createRel.Rd  cypher.Rd  cypherToList.Rd  degreeMatrix.Rd  delete.Rd  deleteProp.Rd  dijkstra.Rd  dropConstraint.Rd  dropIndex.Rd  dropLabel.Rd  endNode.Rd  getConstraint.Rd  getID.Rd  (+30 more)
src/rustlib/: Cargo.toml  fallback.c  testDeps.c
src/rustlib/neo4j/: Cargo.toml  build.rs  wrapper.h
src/rustlib/neo4j/src/: graph.rs  lib.rs  result_stream.rs  utils.rs  value.rs  value_ref.rs
src/rustlib/neo4j/src/tests/: basic.rs
src/rustlib/src/: export.rs  fake_lib.rs  lib.rs
(+28 files in other folders)
