[package]
name = "rustlib"
version = "0.1.0"

[features]
default = ["neo4j-client"]
neo4j-client = ["neo4j"]

[dependencies]
rustr = "0.1"
neo4j = { path = "neo4j", optional = true }

[lib]
name = "rustlib"
crate-type = ["staticlib","rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
